<resources>
    <string name="app_name">Your Yoga</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="categories">Categories</string>
    <string name="poses">Poses</string>
    <string name="your_flows">Your Flows</string>
    <string name="levels">Levels</string>
    <string name="category_image">category image</string>
    <string name="description">Description: </string>
    <string name="benefit">Benefit:</string>
    <string name="category_icon">category icon</string>
    <string name="level_image">level image</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="duration">Duration:</string>
    <string name="number_of_poses">Number of poses:</string>
    <string name="name_of_the_flow">No flow entered please add name of the flow</string>
    <string name="pose_duration">Pose duration</string>
</resources>