<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="#FFDBD6">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#FFF9D4"
        android:clickable="true"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:background="#FFEFD6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/your_flows"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:textStyle="bold" />

            <ImageView
                android:id="@+id/bus"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/category_image"
                app:srcCombat="@drawable/butterfly"
                tools:srcCompat="@drawable/butterfly" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@id/bus"
                android:text="@string/description"
                android:textSize="20sp"
                tools:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>