<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFDBD6">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#FFF9D4"
        android:clickable="true"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEFD6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/categoryName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/your_flows"
                android:textAlignment="center"
                android:textColor="#403742"
                android:textSize="24sp"
                tools:textStyle="bold" />

            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="164dp"
                android:layout_height="170dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/category_image"/>

            <TextView
                android:id="@+id/categoryDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@id/categoryIcon"
                android:text="@string/description"
                android:textSize="20sp"
                android:textColor="#403742"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/categoryDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryDescription"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@id/categoryIcon"
                android:textColor="#403742"
                android:textSize="14sp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                tools:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>