<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFDBD6"
    android:padding="16dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center"
        android:background="#FFDBD6"
        tools:context=".fragments.level.LevelsFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFDBD6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/beginnerCard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#FFF9D4"
                android:clickable="true"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="221dp"
                    android:background="#FFEFD6"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/beginnerText"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textColor="#403742"
                        android:text="@string/beginner"
                        tools:textStyle="bold" />

                    <ImageView
                        android:id="@+id/beginnerIcon"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="60dp"
                        android:contentDescription="@string/level_image"
                        app:srcCompat="@drawable/butterfly"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFDBD6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/intermediateCard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#FFF9D4"
                android:clickable="true"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="221dp"
                    android:background="#FFEFD6"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/intermediateText"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/intermediate"
                        android:textAlignment="center"
                        android:textColor="#403742"
                        android:textSize="24sp"
                        tools:textStyle="bold" />

                    <ImageView
                        android:id="@+id/intermediateIcon"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="60dp"
                        android:contentDescription="@string/level_image"
                        app:srcCompat="@drawable/half_moon" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFDBD6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:id="@+id/expertCard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#FFF9D4"
                android:clickable="true"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="221dp"
                    android:background="#FFEFD6"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/expertText"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/expert"
                        android:textAlignment="center"
                        android:textColor="#403742"
                        android:textSize="24sp"
                        tools:textStyle="bold" />

                    <ImageView
                        android:id="@+id/experIcon"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="60dp"
                        android:contentDescription="@string/level_image"
                        app:srcCompat="@drawable/wild_thing" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

